@@ -1,3 +1,7 @@
+2011-03-09 S. Thiell <stephane.thiell@cea.fr>
+
+	* CLI/Clush.py: Added running progress indicator for --[r]copy commands.
+
 2011-03-08 S. Thiell <stephane.thiell@cea.fr>
 
 	* CLI/Clush.py: Improved -v switch (closes ticket #100: print live node
